Fix header z-index

--- a/src/style/scss/cmps/AppHeader.scss
+++ b/src/style/scss/cmps/AppHeader.scss
@@ -16,7 +16,7 @@
     height: 4.2em;
     margin-top: 0.3em;
     width: calc(100vw - 6rem);
-    z-index: 10;
+    z-index: 1;
     
 
 
